| Summary: | ASTERISK-25948: ast_pthread_mutex_lock calling ast_reentrancy_lock with lt=0x0 | ||
| Reporter: | Diederik de Groot (dkdegroot) | Labels: | asterisk crash lock voicemail |
| Date Opened: | 2016-04-21 08:09:15 | Date Closed: | 2016-09-23 14:24:34 |
| Priority: | Major | Regression? | No |
| Status: | Closed/Complete | Components: | General |
| Versions: | 11.22.0-rc1 13.8.2 | Frequency of Occurrence | One Time |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) ast_25948.txt | |
| Description: | defined(DETECT_DEADLOCKS)
defined(DEBUG_THREADS) Error Steps: - t->tracking = 0 (lock.c: 245) - which causes lt = NULL (lock.c:246) - Which finally results in a call to ast_reentrancy_lock(lt) (lock.c:289) causing a segfault. Potential Solutions: - assert pointer != NULL in ast_reentrancy_lock - include this current block with the previous if(lt) (lock.c: 249) | ||
| Comments: | By: Asterisk Team (asteriskteam) 2016-04-21 08:09:16.616-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Diederik de Groot (dkdegroot) 2016-04-21 08:10:56.426-0500 Backtrace By: Rusty Newton (rnewton) 2016-04-21 08:49:53.939-0500 In the future you can attach any text file as a .txt so it will be easily accessible via the browser without needing to download. This speeds things up for issue triage and our developers. | ||